Show Recurring Events in Event Details and Event Overview